npm installed dependencies

--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/SladeInSeat/GA-Project2-IndexCards/issues"
   },
-  "homepage": "https://github.com/SladeInSeat/GA-Project2-IndexCards#readme"
+  "homepage": "https://github.com/SladeInSeat/GA-Project2-IndexCards#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "handlebars": "^4.1.2",
+    "method-override": "^3.0.0",
+    "mongodb": "^3.2.3"
+  }
 }
