--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "handlebars": "^4.1.2",
     "method-override": "^3.0.0",
-    "mongodb": "^3.2.3"
+    "mongodb": "^3.2.3",
+    "mongoose": "^5.5.4"
   }
 }
