--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "handlebars": "^4.1.2",
+    "hbs": "^4.0.4",
     "method-override": "^3.0.0",
     "mongodb": "^3.2.3",
     "mongoose": "^5.5.4"
